--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,3 +22,5 @@ html
       - if flash.notice.present?
         .alert.alert-success= flash.notice 
       = yield
+      div 
+      = debug(params) if Rails.env.development?
