--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -21,3 +21,4 @@ h1 タスクの詳細
    td= @task.updated_at
 
 = link_to "編集", edit_task_path(@task), class: "btn btn-primary mr-3"
+= link_to "削除", @task, data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-danger"
