--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,2 +1,5 @@
-h1 Admin::Users#index
-p Find me in app/views/admin/users/index.html.slim
+ul
+  - @users.each do |user|
+    li= user.name
+    li= user.email
+    oi------
