--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -15,5 +15,6 @@ table.table.table-hover
         td= task.created_at
         td 
             = link_to "編集", edit_task_path(task), class: "btn btn-primary mr-3"
-            = link_to "削除", task, data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-danger"
+            = link_to "削除", task, method: :delete, data: { turbo_confirm: "本当に削除しますか？" }, class: "btn btn-danger"
+
 
