Add sort func at index

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -19,6 +19,8 @@ h1 タスク一覧
 table.table.table-hover 
  thead.thead-default 
     tr 
+    th= sort_link(@q, :name, [:name, "created_at desc"])
+    / # ransackの提供するsort_linkヘルパーを使用する。
      th= Task.human_attribute_name(:name)
      th= Task.human_attribute_name(:created_at)
      th
