--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -32,5 +32,8 @@ table.table.table-hover
         td 
             = link_to "編集", edit_task_path(task), class: "btn btn-primary mr-3"
             = link_to "削除", task, method: :delete, data: { turbo_confirm: "本当に削除しますか？" }, class: "btn btn-danger"
+= link_to "エクスポート", tasks_path(format: :csv), class: "btn btn-primary mb-3"
+-# URLを生成する際にformat: :csvという指定をすることで、/tasks.csvというURLが生成される。
+-# そのURLにアクセスすると、CSV形式でデータがダウンロードされる。
 
 
