--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,42 +1,37 @@
 h1 タスク一覧
+
 = search_form_for @q, class: "mb-5" do |f|
-  / @qに入力された文字列をクエリパラメータとして送信。
   .form-group.row 
-    =f.label :name_cont, "名称", class: "col-sm-2 col-form-label"
-    / name_contを指定したことで、裏側でSQLのLIKE検索（大文字小文字の含み検索）を実行してくれる。
+    = f.label :name_cont, "名称", class: "col-sm-2 col-form-label"
     .col-sm-10 
       = f.search_field :name_cont, class: "form-control"
-  .form-group.row
-    =f.label :created_at_gteq, "登録日時", class: "col-sm-2 col-form-label"
-    .col-sm-10 
-      = f.search_field :created_at_gteq, class: "form-control"
-  .form-group 
-    =f.submit class: "btn btn-primary"
 
-= link_to "新規登録", new_task_path, class: "btn btn-primary"
+  .form-group.row
+    = f.label :created_at_gteq, "登録日時（以降）", class: "col-sm-2 col-form-label"
+    .col-sm-10 
+      = f.search_field :created_at_gteq, class: "form-control", type: :date
+
+  .form-group 
+    = f.submit "検索", class: "btn btn-primary"
+
+= link_to "新規登録", new_task_path, class: "btn btn-primary mb-3"
 
 .mb-3 
+  = paginate @tasks
+  = page_entries_info @tasks
+
 table.table.table-hover 
- thead.thead-default 
+  thead 
     tr 
-    th= sort_link(@q, :name, [:name, "created_at desc"])
-    / # ransackの提供するsort_linkヘルパーを使用する。
-     th= Task.human_attribute_name(:name)
-     th= Task.human_attribute_name(:created_at)
-     th
- tbody 
+      th = sort_link @q, :name, "名称"
+      th = Task.human_attribute_name(:created_at)
+      th 操作
+  tbody 
     - @tasks.each do |task|
       tr 
-        td= link_to task.name, task
-        td= task.created_at
+        td = link_to task.name, task_path(task)
+        td = l task.created_at, format: :short
         td 
-            = link_to "編集", edit_task_path(task), class: "btn btn-primary mr-3"
-            = link_to "削除", task, method: :delete, data: { turbo_confirm: "本当に削除しますか？" }, class: "btn btn-danger"
-= link_to "エクスポート", tasks_path(format: :csv), class: "btn btn-primary mb-3"
--# URLを生成する際にformat: :csvという指定をすることで、/tasks.csvというURLが生成される。
--# そのURLにアクセスすると、CSV形式でデータがダウンロードされる。
-= form_tag import_tasks_path, multipart: true, class: "mb-3" do
-    = file_field_tag :file
-    = submit_tag "インポート", class: "btn btn-primary"
-
+          = link_to "編集", edit_task_path(task), class: "btn btn-sm btn-outline-primary mr-2"
+          = link_to "削除", @task, method: :delete, data: { turbo_confirm: "本当に削除しますか？" }, class: "btn btn-danger"
 
