--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -33,5 +33,6 @@ table.table.table-hover
         td = l task.created_at, format: :short
         td 
           = link_to "編集", edit_task_path(task), class: "btn btn-sm btn-outline-primary mr-2"
-          = link_to "削除", @task, method: :delete, data: { turbo_confirm: "本当に削除しますか？" }, class: "btn btn-danger"
+          = link_to "削除", task, method: :delete, remote: true, data: { turbo_confirm: "本当に削除しますか？" }, class: "btn btn-danger delete"
+
 
